# biosciences-research

./: .env.example  .gitignore  .gitignore copy  CLAUDE.md  Makefile  README.md  langgraph.json  pyproject.toml
app/: graph_app.py
data/cards/: competency_questions_card.md  evaluation_inputs_card.md  evaluation_metrics_card.md  golden_testset_card.md  sources_card.md
data/interim/: golden_testset.jsonl  golden_testset.parquet  manifest.json  sources.docs.jsonl  sources.docs.parquet
data/interim/golden_testset.hfds/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/interim/sources.hfds/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/processed/: RUN_MANIFEST.json  bm25_evaluation_inputs.parquet  bm25_evaluation_metrics.parquet  cohere_rerank_evaluation_inputs.parquet  cohere_rerank_evaluation_metrics.parquet  comparative_ragas_results.parquet  ensemble_evaluation_inputs.parquet  ensemble_evaluation_metrics.parquet  naive_evaluation_inputs.parquet  naive_evaluation_metrics.parquet
deliverables/evaluation_evidence/: RUN_MANIFEST.json  bm25_detailed_results.csv  bm25_evaluation_dataset.csv  cohere_rerank_detailed_results.csv  cohere_rerank_evaluation_dataset.csv  comparative_ragas_results.csv  ensemble_detailed_results.csv  ensemble_evaluation_dataset.csv  naive_detailed_results.csv  naive_evaluation_dataset.csv
docs/: competency-questions-catalog.md  competency-questions-research-summary.md  prior-art-api-patterns.md
docs/archive/competency-questions/: competency-questions-paul.md
docs/competency-questions/: GUIDANCE.md  competency-questions-catalog.md
docs/competency-validations/: cq1-fop-mechanism-validation.md  cq13-high-commercialization-trials.md  cq2-fop-repurposing-validation.md  cq5-mapk-regulatory-cascade.md  cq7-ngly1-drug-repurposing.md
docs/evaluation/: mcp-capability-assessment-2026-02-02.md  validation-summary.md
docs/plans/: 2026-03-02-cq-plugin-design.md  2026-03-02-cq-plugin-implementation.md
docs/research/: benchmark-datasets-analysis.md  competency-question-gaps.md
docs/research-reports/: car-t-regulatory-landscape.md  high-commercialization-trials-research.md  high-commercialization-trials-validation-report.md
docs/scenarios/: scenario1-validation-report.md  scenario2-enhanced-edge-discovery.md  scenario4-p53-mdm2-nutlin.md  scenario5-session-findings.md
scripts/: evaluate_inference.py  evaluate_metrics.py  extract_competency_questions.py  generate_deliverables.py  ingest_raw_pdfs.py  publish_cq_dataset.py  publish_interim_datasets.py  publish_processed_datasets.py  run_app_validation.py  run_eval_harness.py  run_full_evaluation.py  validate_manifests.py
src/: README.md  __init__.py  config.py  graph.py  prompts.py  retrievers.py  state.py
src/utils/: __init__.py  loaders.py  manifest.py
templates/: hugging_faces_dataset_card_template.md
tests/: __init__.py
(+94 files in other folders)
