[project]
name = "biosciences-research"
version = "0.2.0"
description = "GDELT RAG Evaluation Pipeline and Biosciences Research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core LangChain 1.0 ecosystem
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-cohere>=0.5.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.10",

    # Cohere SDK
    "cohere>=5.20.5",

    # Qdrant
    "qdrant-client>=1.17.0",

    # Evaluation (pinned — PR4 upgrades to 0.4)
    "ragas==0.2.10",

    # Data & tools
    "huggingface-hub>=0.26.0",
    "datasets>=3.2.0",
    "rank-bm25>=0.2.2",
    "pymupdf>=1.26.3",
    "jupyter>=1.1.1",
    "python-dotenv>=1.1.1",

    # LangGraph CLI
    "langgraph-cli[inmem]>=0.4.4",
]
